<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.androidplot.xy.XYPlot
        android:id="@+id/plot"
        style="@style/APDefacto.Light"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:backgroundColor="?android:colorBackground"
        app:domainOriginLineColor="@color/ap_gray"
        app:domainOriginLineThickness="1dp"
        app:domainTitle="@string/graph_domain_title"
        app:graphBackgroundColor="?android:colorBackground"
        app:gridBackgroundColor="?android:colorBackground"
        app:lineLabelRotationBottom="-45"
        app:lineLabels="left|bottom"
        app:paddingTop="2dp"
        app:rangeOriginLineColor="@color/ap_gray"
        app:rangeOriginLineThickness="1dp"
        app:rangeTitle="@string/graph_range_title"
        app:title="@string/graph_title" />

</LinearLayout>